--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -218,8 +218,8 @@ h3.ltitle{
 button {
   height: 55px;
   padding: 0 24px;
-  background: var(--color-lav-purple);
-  color: var(--color-text-black) !important;
+  background: var(--color-dark-purple);
+  color: var(--color-white) !important;
   font-weight: 500;
   display: inline-flex;
   border: none;
