--- a/src/app/styles/_nav.scss
+++ b/src/app/styles/_nav.scss
@@ -3,17 +3,21 @@
   width: 100%;
   left: 0;
   z-index: 9;
+  padding-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   @include responsive(phone) {
     top: 0;
   }
   .container {
-    max-width: 100%;
     display: flex;
     padding: 16px 48px;
+    border-radius: 50px;
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(255, 255, 255, .05);
     backdrop-filter: blur(50px);
     // box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     position: relative;
@@ -31,6 +35,8 @@
       pointer-events: none;
       user-select: none;
       position: absolute;
+    border-radius: 50px;
+
       inset: 0px;
       padding: 1px;
       background: linear-gradient(
