--- a/src/app/styles/_footer.scss
+++ b/src/app/styles/_footer.scss
@@ -10,6 +10,10 @@
       text-align: center;
       p{
         max-width: 60%;
+        @include responsive(phone) {
+          font-size: 14px;
+          max-width: 90%;
+        }
       }
       .btn{
         color: var(--color-dark-purple);
@@ -20,6 +24,15 @@
     padding: 100px 0;
     &.griddo{
       padding-bottom: 0;
+      @include responsive(phone) {
+        padding: 0 32px;
+        .soci{
+    
+          p,a,span{
+            font-size: 12px;
+          }
+        }
+      }
     }
     display: flex;
     gap: 64px;
