--- a/src/app/styles/_header.scss
+++ b/src/app/styles/_header.scss
@@ -1,6 +1,18 @@
 #header {
   padding: 0;
 
+  .deskOnly{
+    display: block;
+    @include responsive(phone) {
+      display: none;
+    }
+  }
+  .mobOnly{
+    display: none;
+    @include responsive(phone) {
+      display: block;
+    }
+  }
   .HContainer {
     display: flex;
     flex-direction: column;
@@ -11,7 +23,7 @@
     text-align: center;
     @include responsive(phone) {
       flex-direction: column;
-      padding: 200px 16px 50px;
+      padding: 150px 0 50px;
     }
     >p{
       font-size: 18px;
@@ -26,6 +38,10 @@
       font-size: 48px;
       line-height: 1.3;
       font-family: var(--font-heading);
+      @include responsive(phone) {
+        font-size: 32px;
+        padding: 32px;
+      }
       >p{
         color: var(--color-lav-purple);
       }
