--- a/src/app/styles/_nav.scss
+++ b/src/app/styles/_nav.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   @include responsive(phone) {
     top: 0;
+    padding-bottom: 10px;
   }
   .container {
     display: flex;
@@ -22,30 +23,30 @@
     // box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     position: relative;
     @include responsive(phone) {
-      border-radius: 0;
+      max-width: 90%;
       flex-wrap: wrap;
       padding: 8px 32px;
       height: 80px;
       transition: all 0.5s ease-in-out;
       overflow: hidden;
     }
-
     &::before {
       content: "";
       pointer-events: none;
       user-select: none;
       position: absolute;
-    border-radius: 50px;
-
+      border-radius: 50px;
+      
       inset: 0px;
       padding: 1px;
       background: linear-gradient(
         rgba(255, 255, 255, 0.1),
         rgba(255, 255, 255, 0)
-      );
-      -webkit-mask: linear-gradient(black, black) content-box content-box,
+        );
+        -webkit-mask: linear-gradient(black, black) content-box content-box,
         linear-gradient(black, black);
-      -webkit-mask-composite: xor;
+        -webkit-mask-composite: xor;
+        
     }
     .logo {
       height: 60px;
@@ -97,7 +98,7 @@
         @include responsive(phone) {
           &.menu {
             flex-direction: column;
-            padding-top: 64px;
+            padding-top: 32px;
             li {
               flex: 1;
               a {
@@ -141,7 +142,9 @@
   }
   &.opened {
     .container {
-      height: 100vh;
+      padding-top: 32px;
+      height: 70vh;
+      justify-content: flex-start;
     }
   }
 }
