--- a/src/app/styles/_portfolio.scss
+++ b/src/app/styles/_portfolio.scss
@@ -3,7 +3,7 @@
     background: #fff;
     color: var(--color-text-black);
     @include responsive(phone) {
-      padding: 50px 0;
+      padding: 100px 0;
     }
     .aligner{
         text-align: center;
@@ -14,6 +14,10 @@
         p{
             max-width: 60%;
             margin-top: 32px;
+            @include responsive(phone) {
+              font-size: 14px;
+              max-width: 90%;
+            }
         }
     }
     .marquee {
