--- a/src/app/styles/_why.scss
+++ b/src/app/styles/_why.scss
@@ -3,22 +3,36 @@
     background-size: cover;
     padding: 150px;
     @include responsive(phone) {
-      padding: 50px 0;
+      padding: 100px 0;
+      .container{
+        padding: 0;
+      }
     }
     .whyText {
       font-weight: 200;
       text-align: center;
       @include responsive(phone) {
         margin-top: 0;
-        padding: 0px 0 150px;
       }
     
       .whyItems{
         display: flex;
         gap: 48px;
         margin-top: 64px;
+        @include responsive(phone) {
+          max-width: 100%;
+          overflow: auto;
+          padding: 0 32px;
+        }
         .whyItem{
             flex: .25 0 0;
+            @include responsive(phone) {
+              padding: 24px;
+              border: solid 1px #fff;
+              flex: unset;
+              min-width: 70%;
+              width: 70%;
+            }
             h4{
                 font-size: 18px;
                 margin-bottom: 8px;
