--- a/src/app/styles/_about.scss
+++ b/src/app/styles/_about.scss
@@ -47,8 +47,13 @@
       color: var(--color-text-black);
       gap: 12px;
       position: relative;
+      overflow: hidden;
       @include responsive(phone) {
         width: 90%;
+        background: #fff;
+      }
+      @include responsive(tablet) {
+        padding: 25px 50px;
       }
       >*{
         z-index: 1;
@@ -69,9 +74,11 @@
           position: absolute;
           z-index: 0;
           height: 100%;
-          width: 100%;
-          transform: scaleY(1.25);
-          transform-origin: center 40px;
+          width: auto;
+          max-width: none;
+          @include responsive(phone) {
+            display: none;
+          }
         }
         
       }
