--- a/src/app/styles/_nav.scss
+++ b/src/app/styles/_nav.scss
@@ -55,7 +55,7 @@
         height: 100%;
       }
       @include responsive(phone) {
-        height: 40px;
+        height: 60px;
         width: auto;
       }
     }
@@ -87,6 +87,9 @@
           font-weight: 500;
           font-size: 16px;
           position: relative;
+          &.btn{
+            border-radius: 50px;
+          }
         }
       }
       &.soci {
