--- a/src/app/styles/_nav.scss
+++ b/src/app/styles/_nav.scss
@@ -81,14 +81,18 @@
       }
       li {
         a {
-          color: #fff;
+          color: var(--color-white);
           display: flex;
           align-items: center;
           font-weight: 500;
           font-size: 16px;
           position: relative;
+          text-shadow: 0 0 3px rgba(0,0,0,.5);
           &.btn{
             border-radius: 50px;
+            box-shadow: 0 0 6px rgba(0,0,0,.25);
+            color: var(--color-dark-purple);
+            text-shadow: none;
           }
         }
       }
@@ -121,8 +125,8 @@
             right: 0;
             width: 100%;
             height: 2px;
-            background: #fff;
-            top: 100%;
+            background: var(--color-white);
+            top: calc(100% + 6px);
             transition: transform 0.25s ease-out 0s;
             transform-origin: right bottom;
             transform: scaleX(0);
@@ -152,7 +156,7 @@
   }
 }
 
-$color: #fff;
+$color: var(--color-white);
 $animation: 500ms;
 $scale: 0.75;
 
