--- a/src/app/styles/_testimonials.scss
+++ b/src/app/styles/_testimonials.scss
@@ -1,6 +1,6 @@
 .testimonials{
     padding: 150px 0;
-    background: #fff;
+    background: var(--color-white);
     color: var(--color-text-black);
     background: var(--color-light-grad);
     @include responsive(phone) {
@@ -53,7 +53,7 @@
 
             @include responsive(phone) {
                 padding: 24px;
-                border: solid 1px #fff;
+                border: solid 1px var(--color-white);
                 flex: unset;
                 min-width: 80%;
                 width: 80%;
