--- a/src/app/styles/_nav.scss
+++ b/src/app/styles/_nav.scss
@@ -18,7 +18,8 @@
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    background: rgba(255, 255, 255, .05);
+    background: rgba(14, 8, 45, .75);
+    // background: rgba(0, 0, 0, .5);
     backdrop-filter: blur(50px);
     // box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     position: relative;
@@ -87,12 +88,10 @@
           font-weight: 500;
           font-size: 16px;
           position: relative;
-          text-shadow: 0 0 3px rgba(0,0,0,.5);
           &.btn{
             border-radius: 50px;
             box-shadow: 0 0 6px rgba(0,0,0,.25);
             color: var(--color-dark-purple);
-            text-shadow: none;
           }
         }
       }
