--- a/src/app/styles/_nav.scss
+++ b/src/app/styles/_nav.scss
@@ -19,9 +19,7 @@
     align-items: center;
     margin: auto;
     background: rgba(14, 8, 45, .75);
-    // background: rgba(0, 0, 0, .5);
     backdrop-filter: blur(50px);
-    // box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     position: relative;
     @include responsive(phone) {
       max-width: 90%;
@@ -92,6 +90,10 @@
             border-radius: 50px;
             box-shadow: 0 0 6px rgba(0,0,0,.25);
             color: var(--color-dark-purple);
+            @include responsive(phone) {
+              height: 70px;
+              padding: 0 32px;
+            }
           }
         }
       }
