--- a/src/app/styles/_header.scss
+++ b/src/app/styles/_header.scss
@@ -3,6 +3,10 @@
   position: relative;
   overflow: hidden;
   background: var(--color-dark-purple);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 >*{
   position: relative;
   z-index: 1;
