--- a/src/app/styles/_nav.scss
+++ b/src/app/styles/_nav.scss
@@ -38,9 +38,9 @@
       
       inset: 0px;
       padding: 1px;
-      background: linear-gradient(
-        rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0)
+      background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.2),
+        rgba(255, 255, 255, 0.05)
         );
         -webkit-mask: linear-gradient(black, black) content-box content-box,
         linear-gradient(black, black);
