--- a/src/app/styles/_header.scss
+++ b/src/app/styles/_header.scss
@@ -54,8 +54,8 @@
     @include responsive(phone) {
       flex-direction: column;
       padding: 150px 0 50px;
-      br{
-        display: none;
+      p{
+        display: inline-block;
       }
     }
     >p{
