--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -18,6 +18,7 @@
   --color-lav-purple: #8C54E0;
   --color-white: #FFFFFF;
   --color-purple: #3B0D80;
+  --color-golden-yellow: #D39E27;
   --color-dark-purple: #0E082D;
   --color-text-black: #131313;
   --color-crimosn: #E84779;
