--- a/src/app/styles/_testimonials.scss
+++ b/src/app/styles/_testimonials.scss
@@ -1,94 +1,124 @@
-.testimonials{
-    padding: 150px 0;
-    background: var(--color-white);
-    color: var(--color-text-black);
-    background: var(--color-light-grad);
+.testimonials {
+  padding: 150px 0;
+  background: var(--color-white);
+  color: var(--color-text-black);
+  background: var(--color-light-grad);
+  position: relative;
+  .goldern,
+  .purple {
+    width: 100px;
+    position: absolute;
+    left: 5%;
+    top: 10%;
+    z-index: 0;
     @include responsive(phone) {
-      padding: 100px 0;
-      .container{
-        padding: 0;
+      width: 75px;
+      top: 0;
+      left: -10px;
+      transform: rotate(25deg);
+    }
+  }
+  .goldern {
+    width: 150px;
+    bottom: 0%;
+    right: 0%;
+    left: auto;
+    top: auto;
+    transform: rotate(15deg);
+    z-index: 2;
+    @include responsive(phone) {
+        width: 75px;
+        transform: rotate(-15deg);
+    }
+  }
+  @include responsive(phone) {
+    padding: 100px 0;
+    .container {
+      padding: 0;
+    }
+  }
+  .container {
+    position: relative;
+    z-index: 1;
+  }
+  .aligner {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 32px;
+    align-items: center;
+    p {
+      max-width: 60%;
+      margin-top: 16px;
+      @include responsive(phone) {
+        font-size: 14px;
+        max-width: 90%;
       }
     }
-    .aligner{
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 32px;
-        align-items: center;
-        p{
-            max-width: 60%;
-            margin-top: 16px;
-            @include responsive(phone) {
-                font-size: 14px;
-                max-width: 90%;
-              }
-        }
-    }      
-    .testimonial-cards {
-      
-        columns: 3;
-        gap: 32px;
-        @include responsive(phone) {
-            display: flex;
-            max-width: 100%;
-            overflow: auto;
-            padding: 0 32px;
-            align-items: flex-start;
-          }
-        
-        
-        .testimonial-card {
-            background-color: white;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 32px;
-            -webkit-break-inside:avoid;
-            -moz-break-inside:avoid;
-            -o-break-inside:avoid;
-            -ms-break-inside:avoid;
-            break-inside:avoid;
+  }
+  .testimonial-cards {
+    columns: 3;
+    gap: 32px;
+    @include responsive(phone) {
+      display: flex;
+      max-width: 100%;
+      overflow: auto;
+      padding: 0 32px;
+      align-items: flex-start;
+    }
 
-            @include responsive(phone) {
-                padding: 24px;
-                border: solid 1px var(--color-white);
-                flex: unset;
-                min-width: 80%;
-                width: 80%;
-              }
-        }
-        .person{
-            display: flex;
-            align-items: center;
-            gap: 24px;
-        }
-        
-        .testimonial-image {
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            object-fit: cover;
-            margin-bottom: 20px;
-        }
-        
-        .testimonial-card h4 {
-            font-size: 16px;
-            font-weight: 600;
-            font-size: 1.2em;
-            margin-bottom: 15px;
-            @include responsive(phone) {
-                font-size: 14px;
-            }
-        }
-        
-        .testimonial-card p {
-            font-size: 14px;
-            line-height: 1.5;
-            @include responsive(phone) {
-                font-size: 13px;
-            }
-        }
-    }     
+    .testimonial-card {
+      background-color: white;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 32px;
+      -webkit-break-inside: avoid;
+      -moz-break-inside: avoid;
+      -o-break-inside: avoid;
+      -ms-break-inside: avoid;
+      break-inside: avoid;
+
+      @include responsive(phone) {
+        padding: 24px;
+        border: solid 1px var(--color-white);
+        flex: unset;
+        min-width: 80%;
+        width: 80%;
+      }
+    }
+    .person {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+    }
+
+    .testimonial-image {
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      object-fit: cover;
+      margin-bottom: 20px;
+    }
+
+    .testimonial-card h4 {
+      font-size: 16px;
+      font-weight: 600;
+      font-size: 1.2em;
+      margin-bottom: 15px;
+      @include responsive(phone) {
+        font-size: 14px;
+      }
+    }
+
+    .testimonial-card p {
+      font-size: 14px;
+      line-height: 1.5;
+      @include responsive(phone) {
+        font-size: 13px;
+      }
+    }
+  }
 }
