--- a/src/app/styles/_testimonials.scss
+++ b/src/app/styles/_testimonials.scss
@@ -107,6 +107,7 @@
       font-size: 16px;
       font-weight: 600;
       font-size: 1.2em;
+      line-height: 1.4;
       margin-bottom: 15px;
       @include responsive(phone) {
         font-size: 14px;
@@ -116,6 +117,8 @@
     .testimonial-card p {
       font-size: 14px;
       line-height: 1.5;
+      letter-spacing: 0;
+      padding-bottom: 16px;
       @include responsive(phone) {
         font-size: 13px;
       }
